--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="wrapper">
-      <header class='shining-link'>
+      <header>
         <p id="identity">Mathieu B&eacute;nard</p>
         <nav>
           <a href="{{ site.baseurl }}/">HOME</a>
