--- a/demo/css/style.css
+++ b/demo/css/style.css
@@ -1,5 +1,9 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto+Condensed:700,400);
 
+body {
+  background-image: url("images/shattered.png");
+}
+
 .wrapper {
   display: flex;
   flex-direction: row;
@@ -9,12 +13,13 @@
 
 section {
   min-width: 400px;
-  border: solid 3px grey;
   vertical-align: top;
   border-radius: 5px;
   padding: 20px;
   margin: 10px 5px 0 0;
   font: 700 1em "Roboto", sans-serif;
+  background-color: whitesmoke;
+  box-shadow: 0 0 10px #777 inset;
 }
 #split-flap {
   margin: auto;
@@ -30,6 +35,7 @@ section {
 #controls input {
   border: none;
   width: 2em;
+  background-color: whitesmoke;
 }
 
 #clock {
