--- a/demo/css/style.css
+++ b/demo/css/style.css
@@ -1,10 +1,11 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto+Condensed:700,400);
+@import url(http://fonts.googleapis.com/css?family=Roboto);
 
 body {
   background-image: url("images/shattered.png");
 }
 
-.wrapper {
+.wrapper > div:nth-of-type(2) {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -51,3 +52,14 @@ section {
   letter-spacing: 0.1em;
 }
 
+.instructions p {
+  margin: 0;
+}
+
+.instructions {
+  width: 960px;
+  margin: auto;
+  padding-top: 20px;
+  text-align: center;
+  font: 1em "Roboto",sans-serif;
+}
